# Rasterizer

./: CMakeLists.txt  README.md  main.cpp
include/: camera.hpp  geometry.hpp  init.hpp  math.hpp  parseobj.hpp  rast.hpp  renderer.hpp
src/: camera.cpp  geometry.cpp  init.cpp  math.cpp  parseobj.cpp  renderer.cpp
